# belvedere-open-data

./: .gitignore  DATA_PREPARATION.md  README.md  README_stac.md  README_zenodo.md  pyproject.toml  stac_build_catalog.py  stac_usage_example.ipynb
.github/workflows/: deploy-stac.yml
scripts/: apply_geoid_correction.py  apply_geoid_correction.sh  compute_dem_of_difference_gdal.sh  convert_raster_to_cog.sh  convert_to_cog.sh  convert_to_cog_batch.sh  convert_to_copc.sh  convert_to_copc_batch.sh  generate_dsm_previews.py
stac_catalog/: catalog.json  index.html
stac_catalog/belvedere-monitoring/: collection.json
stac_catalog/belvedere-monitoring/belv_1977_histo-aerial/: belv_1977_histo-aerial.json
stac_catalog/belvedere-monitoring/belv_1991_histo-aerial/: belv_1991_histo-aerial.json
stac_catalog/belvedere-monitoring/belv_2001_histo-aerial/: belv_2001_histo-aerial.json
stac_catalog/belvedere-monitoring/belv_2009_digital-aerial/: belv_2009_digital-aerial.json
stac_catalog/belvedere-monitoring/belv_2015_uav/: belv_2015_uav.json
stac_catalog/belvedere-monitoring/belv_2016_uav/: belv_2016_uav.json
stac_catalog/belvedere-monitoring/belv_2017_uav/: belv_2017_uav.json
stac_catalog/belvedere-monitoring/belv_2018_uav/: belv_2018_uav.json
stac_catalog/belvedere-monitoring/belv_2019_uav/: belv_2019_uav.json
stac_catalog/belvedere-monitoring/belv_2020_uav/: belv_2020_uav.json
stac_catalog/belvedere-monitoring/belv_2021_uav/: belv_2021_uav.json
stac_catalog/belvedere-monitoring/belv_2022_uav/: belv_2022_uav.json
(+2 files in other folders)
