[project]
authors = [{ name = "Francesco", email = "francesco.ioli@polimi.it" }]
dependencies = []
name = "belvedere"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
# Core geospatial stack (all from conda-forge)
python = ">=3.14.3,<3.15"
pystac = ">=1.14.3,<2"
pyproj = ">=3.7.2,<4"
shapely = ">=2.1.2,<3"
gdal = ">=3.12.3,<4"
pdal = ">=2.10.0,<3"
rasterio = ">=1.5.0,<2"
matplotlib = ">=3.10.9,<4"
# Glacier/DEM analysis
xdem = ">=0.2"
geoutils = ">=0.2"
# Useful extras for research workflows
numpy = ">=2.0,<3"
pandas = ">=2.0,<3"
ipykernel = "*"
tqdm = "*"

[tool.pixi.pypi-dependencies]
# belv = { path = ".", editable = true }

[tool.pixi.tasks]
notebook = "jupyter lab"
